--- a/css/styles.css
+++ b/css/styles.css
@@ -514,9 +514,6 @@ body {
   fill: #afb1b8;
 }
 
-/* .team-soc-item:not(:last-child) {
-    margin-right: 10px;} */
-
 .team-position {
   font-weight: 400;
   font-size: 16px;
@@ -736,6 +733,60 @@ body {
   fill: #ffffff;
 }
 
+/* -------форма підписки--------- */
+/* .form-footer {
+  margin-left: auto;
+} */
+
+.footer-form > .link-button {
+  display: flex;
+  align-items: center;
+}
+.join-icon {
+  display: inline-block;
+  margin-left: 10px;
+}
+.footer-form {
+  display: flex;
+  width: 570px;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer-form input[type="email"] {
+  min-width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  background: inherit;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  outline: none;
+  padding: 12px 16px;
+  font-size: 16px;
+  line-height: 1.87;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.link-button {
+  border: 1px solid transparent;
+  padding: 10px 32px;
+  min-width: 200px;
+  min-height: 50px;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  border-radius: 4px;
+  cursor: pointer;
+  color: var(--main-white-color);
+  background-color: var(--accent-color);
+  outline: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-decoration: none;
+  text-align: center;
+  letter-spacing: 0.06em;
+}
+
 /* --------modal--------- */
 
 .modal {
@@ -814,7 +865,7 @@ body {
   height: 50px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  padding-left: 15px;
+  padding-left: 42px;
   font-weight: 400;
   font-size: 12px;
   line-height: 0.8;
