--- a/css/styles.css
+++ b/css/styles.css
@@ -873,13 +873,13 @@ body {
   color: #757575;
 }
 
-.form-input::placeholder {
+/* .form-input::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: #757575;
-}
+} */
 
 .input-wrap {
   position: relative;
@@ -921,7 +921,7 @@ body {
   outline-color: rgba(33, 150, 243, 1);
 }
 
-.form-input:focus + form-icon {
+.form-input:focus + .form-icon {
   fill: rgba(33, 150, 243, 1);
 }
 
@@ -968,6 +968,16 @@ body {
   color: var(--text-color);
 }
 
+.chekbox-text span {
+  width: 16px;
+  height: 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  fill: solid 212121;
+  display: block;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-checkbox {
   fill: var(--dark-main-color);
 }
@@ -977,14 +987,31 @@ body {
   text-decoration: underline;
 }
 
-.form-che {
-  /* position: absolute; */
-  display: block;
+.icon-che {
+  display: inline-block;
   top: 50%;
   left: 16px;
-  fill: rgba(33, 33, 33, 1);
+  margin-right: 5px;
+  border: 2px solid;
+  border-color: var(--dark-main-color);
+  fill: var(--main-white-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.input-che:checked + .chekbox-text span {
+  background-color: var(--accent-color);
+  border-color: transparent;
+}
+
+.input-che:checked + .chekbox-text .icon-che {
+  background-color: var(--accent-color);
+  border: none;
+  fill: var(--main-white-color);
+}
+
+.input-che:focus + .chekbox-text span {
+  border-color: var(--accent-color);
+}
 /* .form-input:not(:focus):not(:placeholder-shown):valid {
   display: block;
 } */
