--- a/css/styles.css
+++ b/css/styles.css
@@ -969,22 +969,15 @@ body {
 }
 
 .chekbox-text span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 16px;
   height: 15px;
   border-radius: 4px;
   cursor: pointer;
   fill: solid 212121;
-  display: block;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-checkbox {
-  fill: var(--dark-main-color);
-}
-
-.modal-link {
-  color: rgba(33, 150, 243, 1);
-  text-decoration: underline;
 }
 
 .icon-che {
@@ -996,6 +989,15 @@ body {
   border-color: var(--dark-main-color);
   fill: var(--main-white-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-checkbox {
+  fill: var(--dark-main-color);
+}
+
+.modal-link {
+  color: rgba(33, 150, 243, 1);
+  text-decoration: underline;
 }
 
 .input-che:checked + .chekbox-text span {
