--- a/css/styles.css
+++ b/css/styles.css
@@ -827,27 +827,53 @@ body {
   transform: translate(-50%, -50%) scale(0) rotate(-180deg);
 }
 
+.backdrop.is-hidden .modal .close-modal {
+  transform: scale(1)
+}
+
 .close {
   position: absolute;
-  top: 8px;
-  right: 8px;
-  color: #ffffff;
-  border: rgba(0, 0, 0, 0.1);
-  background-color: transparent;
+  top: -9px;
+  right: -9px;
   width: 30px;
   height: 30px;
+  cursor: pointer;
+  color: #000000;
+  background-color: var(--main-white-color);
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  border: none;
+  outline: none;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 1px 3px rgba(0, 0, 0, 0.12);
+  transform: scale(1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-modal {
+  display: block;
+  fill: currentColor;
+  margin: auto;
   background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   border-radius: 50%;
+}
+
+.close:hover .close-modal,
+.close:focus .close-modal,
+.close:hover,
+.close:focus {
+  transform: scale(1.3);
+  background-color: var(--accent-color);
+  fill: var(--main-white-color);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close:hover,
+.close:focus,
+.close:active {
+  fill: var(--main-white-color);
+  border: 0.5px groove var(--background-primary-gray);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* --------form---------- */
@@ -860,12 +886,12 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 12px;
 }
 
 .form-input {
   width: 100%;
-  height: 50px;
+  height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
@@ -889,7 +915,12 @@ body {
 }
 
 .input-field {
-  margin-bottom: 28px;
+  margin-bottom: 12px;
+}
+
+.input-field-comm {
+  margin-bottom: 30px;
+
 }
 
 .form-icon {
@@ -911,7 +942,7 @@ body {
 .input-title {
   font-weight: 400;
   font-size: 12px;
-  line-height: 0.8;
+  line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--text-color);
   display: block;
@@ -943,7 +974,7 @@ body {
 }
 
 .send-btn {
-  display: inline-block;
+  display: block;
   background: #188ce8;
   color: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -962,6 +993,7 @@ body {
   display: flex;
   align-items: center;
   text-align: center;
+  margin: 0 auto;
 }
 
 .chekbox-text {
@@ -1005,7 +1037,6 @@ body {
 .chek-link {
   padding-left: 3px;
 }
-
 
 .input-che:checked + .chekbox-text span {
   background-color: var(--accent-color);
